# gpg-forward

./: .travis.yml  README.md  README.rst  setup.cfg  setup.py
gpg_forward/: __init__.py
