[metadata]
name = gpg-forward
summary = Forward GPG agent socket to remote host over SSH
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
author = Piotr Śliwka
author-email = contact@psliwka.info
license = MIT
home-page = https://github.com/psliwka/gpg-forward
python-requires = >=3.6

[files]
packages =
    gpg_forward

[entry_points]
console_scripts =
    gpg-forward = gpg_forward:main
